--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,40 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".SplashActivity">
 
     <ImageView
-        android:id="@+id/imageViewLogoUfps"
+        android:id="@+id/iv_logo_ufps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rotationX="4"
-        android:rotationY="-24"
-        android:src="@drawable/logo_ufps_app"
-        android:transitionName="logo_splash" />
+        android:src="@drawable/logo_vertical_sin_fondo"
+        android:transitionName="logo_splash"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textViewTitulo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bungee_shade"
-        android:text="@string/titulo"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:textSize="30sp"
-        android:transitionName="text_splash" />
 
     <ImageView
-        android:id="@+id/imageViewLogoApp"
+        android:adjustViewBounds="true"
+        android:id="@+id/iv_splash_buttom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rotationX="17"
-        android:rotationY="-15"
-        android:src="@drawable/logo_cedcufps" />
-</LinearLayout>
+        android:src="@drawable/splash_buttom"
+        android:transitionName="buttom_splash"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
