--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,10 +31,11 @@
         android:id="@+id/floatActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/colorBtnFlotante"
+        app:backgroundTint="@color/colorBtnFloating"
         app:layout_anchor="@id/bottomAppBar"
         app:rippleColor="@color/colorPrimary"
-        app:srcCompat="@drawable/ic_baseline_power_settings_new_24_white" />
+        app:srcCompat="@drawable/ic_baseline_power_settings_new_24_white"
+        android:contentDescription="@string/btn_floating" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
