--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#e8e8e8</color>
     <color name="colorWhite">#ffff</color>
     <color name="transparent">#00000000</color>
-    <color name="colorBtnFlotante">#818386</color>
+    <color name="colorBtnFloating">#818386</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">
         @color/colorPrimary
