--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,10 +27,10 @@
 
 
         <ImageView
-            android:layout_margin="40dp"
             android:id="@+id/iv_logo_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="40dp"
             android:src="@drawable/logo_qr_medio"
             app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -50,17 +50,22 @@
             app:layout_constraintVertical_bias="0.0" />
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
+            android:backgroundTint="@color/colorWhite"
+            android:elevation="6dp"
             android:text="@string/btn_google"
-            android:layout_margin="40dp"
+            android:textColor="@color/colorBlack"
+            app:icon="@drawable/ic_google"
+            app:iconTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_logo_login" />
-
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo_login"
+            app:strokeColor="@color/colorPrimary" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
