--- a/app/src/main/res/layout/dialog_progress.xml
+++ b/app/src/main/res/layout/dialog_progress.xml
@@ -18,10 +18,11 @@
             android:indeterminateDrawable="@drawable/progress_bar"/>
 
         <TextView
+            android:id="@+id/textViewDialogProgressTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="@string/verificando"
+            android:text="@string/charging"
             android:textSize="20sp"
             android:textStyle="italic" />
     </LinearLayout>
