--- a/app/src/main/res/layout/layout_logout_dialog.xml
+++ b/app/src/main/res/layout/layout_logout_dialog.xml
@@ -8,58 +8,42 @@
     app:cardCornerRadius="5dp"
     app:cardElevation="4dp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/textViewErrorModal"
+            style="@style/text2Modal"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textViewErrorModal"
-                style="@style/text2Modal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Asistencia invalida"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end">
-
-                <com.airbnb.lottie.LottieAnimationView
-                    android:id="@+id/animation_view"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    app:lottie_autoPlay="true"
-                    app:lottie_loop="true"
-                    app:lottie_rawRes="@raw/error" />
-
-            </LinearLayout>
-        </LinearLayout>
-
+            android:layout_gravity="center"
+            android:text="¿Estas seguro que deseas cerrar sesión?"
+            android:textAlignment="center"
+            android:textAppearance="?attr/textAppearanceHeadline6" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="right">
+            android:gravity="end">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnModalError"
+                android:id="@+id/buttonLogoutDialogCancel"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonLogoutDialogAccept"
                 style="?attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/accept" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
