--- a/app/src/main/res/layout/modal_jornadas_exito.xml
+++ b/app/src/main/res/layout/modal_jornadas_exito.xml
@@ -152,7 +152,7 @@
                 style="?attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/aceptar" />
+                android:text="@string/accept" />
 
         </LinearLayout>
 
